# canvas

./: .dockerignore  .flake8  .gitignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  mkdocs.yml  package.json  pyproject.toml  test.sh
.github/workflows/: build.yaml  publish.yaml  release.yaml
files/: config.fish  entry.sh  entrypoint.sh  init.vim
files/dot/: .aliases  .bashrc  .p10k.zsh  .zshrc
files/vscode/: config.yaml  keybindings.json  package.json  settings.json
scripts/: clean.py  deps.py  docker.py  docs.py
src/canvas/: __init__.py  __main__.py  typing.py
