[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool.black]
line-length = 80

[tool.poetry]
authors = ["Macklan Weinstein <wolfgangwazzlestrauss@gmail.com>"]
description = "Docker images designed for containerized development."
homepage = "https://github.com/wolfgangwazzlestrauss/canvas"
keywords = ["docker"]
license = "MIT"
name = "canvas"
readme = "README.md"
version = "0.0.2"

[tool.poetry.dependencies]
python = "^3.6.1"
typer = "^0.0.11"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"
flake8-bugbear = "^20.1.4"
flake8-docstrings = "^1.5.0"
flake8-import-order = "^0.18.1"
mccabe = "^0.6.1"
mkdocs = "^1.1"
mkdocs-material = "^4.6.3"
mypy = "^0.761"
pre-commit = "^1.21.0"
pymdown-extensions = "^6.3"
toml = "^0.10.0"
typer = "^0.0.11"

[tool.poetry.scripts]
canvas = "canvas.__main__:app"
