[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=1.0"]

[tool.black]
line-length = 80

[tool.poetry]
authors = ["Macklan Weinstein <wolfgangwazzlestrauss@gmail.com>"]
description = "Docker images designed for containerized development."
homepage = "https://github.com/wolfgangwazzlestrauss/canvas"
keywords = ["docker"]
license = "MIT"
name = "canvas"
readme = "README.md"
version = "0.1.2"

[tool.poetry.dependencies]
python = "^3.6.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
flake8-bugbear = "^20.1.4"
flake8-docstrings = "^1.5.0"
flake8-import-order = "^0.18.1"
mccabe = "^0.6.1"
mkdocs = "^1.1.2"
mkdocs-material = "^6.0.2"
mypy = "^0.782"
pre-commit = "^2.7.1"
pymdown-extensions = "^8.0.1"
toml = "^0.10.1"
typer = "^0.3.2"
