# Python configuration file for building, dependencies, and tooling.
#
# For more information, visit
# https://snarky.ca/what-the-heck-is-pyproject-toml/.

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
line-length = 80

[tool.poetry]
authors = ["Macklan Weinstein <wolfgang.wazzle.strauss@gmail.com>"]
description = "Docker images designed for containerized development."
homepage = "https://github.com/scruffaluff/canvas"
keywords = ["docker"]
license = "MIT"
name = "canvas"
readme = "README.md"
version = "0.1.2"

[tool.poetry.dependencies]
python = "^3.6.2"

[tool.poetry.dev-dependencies]
black = "^21.4b1"
flake8 = "^3.9.1"
flake8-bugbear = "^21.4.3"
flake8-docstrings = "^1.6.0"
flake8-import-order = "^0.18.1"
mccabe = "^0.6.1"
mkdocs = "^1.1.2"
mkdocs-material = "^7.1.3"
mypy = "^0.812"
pymdown-extensions = "^8.1.1"
toml = "^0.10.2"
typer = "^0.3.2"
